updated styling, uploaded compressed homepage photo, fixed header, fixed styling on safari

--- a/styling-sheets/aboutus.css
+++ b/styling-sheets/aboutus.css
@@ -140,6 +140,7 @@ html {
     padding: 10px;
     transition: transform 0.6s ease;
     width: calc(25% - 10px);
+    text-align: center;
 }
 
 .team-card:hover{
@@ -153,6 +154,7 @@ html {
     width: 130px;
     object-fit: cover;
     margin-bottom: 5px;
+    position: relative;
 }
 
 .team-detail h3{
@@ -169,15 +171,18 @@ html {
 
 #sponsors {
     padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sponsor-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    max-width: 90%;
 }
 
 .sponsor-container h1{
@@ -185,7 +190,7 @@ html {
 }
 
 .sponsor-request{
-    width: 400px;
+    width: 90%;
     margin-top: 15px;
 }
 
@@ -212,14 +217,17 @@ html {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    width: 100%;;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    width: 100%;
+    margin: 1em;
 }
 
 .sponsor-logo{
-    width: 100%;
     height: 100%;
+    margin: 0 1em;
+}
+
+.sponsor-logo-wide{
+    height: 60%;
 }
 
 .silver-sponsor, .gold-sponsor, .bronze-sponsor{
@@ -270,6 +278,11 @@ html {
 /* MEDIA QUERIES  */
 
 @media screen and (max-width: 768px) {
+
+    .cover-title{
+        -webkit-text-stroke: 1.5px black;
+    }
+
     .team-cards{
         direction: flex;
         flex-direction: column;
