--- a/styling-sheets/header.css
+++ b/styling-sheets/header.css
@@ -25,8 +25,7 @@
     align-items: center;
     display: flex;
     flex: 1;
-    justify-content: space-evenly;
-    background-color: white;
+    justify-content: center;
     max-width: 300px;
     margin-left: auto;
     margin-right: auto;
